# ETLassignmnetFunsolTech

./: .gitignore  README.md  task.txt
animals_etl/: README.md  pyproject.toml
animals_etl/.github/workflows/: ci.yml
animals_etl/src/animals_etl/: client.py  etl.py  main.py  models.py
animals_etl/src/animals_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
animals_etl/tests/: test_batching.py  test_models.py
